* update google chrome from 75.0.3767.0 to 95.0.4615.0
* update sratoolkit from 2.9.6 to 3.0.
* update sra download to url since NCBI retired trace database
* update tbl2asn to 25.8
* update antismash to v6.1.1
* update SPAdes to v3.15.5
* update samtools to v1.16.1, bcftools to v1.16
* update bowtie2 to v2.5.1
* update minimap2 to v2.24
* update Unicycler to v0.5.0
* update Qiime2 to 2022.2
* add offset extenstion for primer trim
* add -K 10000000 for bwa mem reproducibility
* fix taxonomy classification tool summary reads count bug
* fix qiime2 mapping files parsing. only two columns for file_manifest.txt
* check duplicate id in ref fasta
* get rid of Anaconda2
* use Mambaforge instead of Anaconda3


EDGE GUI 2.4.1
* Extract mapped Diamond reads 
* Add job queue
* Add SPAdes new algorithm for Biosynthetic, coronavirus, metaviral,
metaplasmid and RNAviral

Database:
QIIME2 amplicon: Greengeen 13_8, SLIVA 138, Fungal ITS version 9.0 trained by scikit-learn 0.24.1
Antismash database for antisamsh v6.


-- Version 20201130
EDGE 2.4.0
* Update bcftools from 1.6 to 1.10.2
* Update samtools from 1.9 to 1.10
* Update racon from 1.3.1 to 1.4.13
* Add Python package lzstring, h5py
* Add biom format output for taxonomy classification module.
* Fix bug: data clean script in docker or symlink directory
* Fix bug: the fix mapping file Description column
* Fix bug: contig map to reference INDELs counting and show >85% mapped contig number
* Fix bug: RATT annotatiom embl format
* Update gottcha2 and pangia codes for corresponding database update
* Update megahit from 1.0.3 to 1.1.3.
* Update R from 3.3.2 to 3.6.3
* Update rgi from 3.1.1 to 5.1.0
* Update bowtie2 from 2.2.6 to 2.4.1
* Update bedtools from 2.19.1 to 2.27.1
* Update minimap2 from 2.10 to 2.16
* Update prokka from 1.13 to 1.14.5
* Update ncbi-blast from 2.5.0 to 2.10.0
* Update SPAdes from 3.11.1 to 3.13.0
* Update sratoolskit from 2.8.2 to 2.9.6
* Update JBrowse from 1.12.3 to 1.16.8