@@ -211,7 +211,7 @@
 				</div>
 				<div data="runEDGE" class="app-info">
 					<div class="app-name-version">
-						<div class="app-version">2.4.0</div>
+						<div class="app-version">2.4.1</div>
 						<div class="app-name">Run EDGE</div>
 					</div>
 					<div class="app-summary">EDGE bioinformatics</div>
@@ -1704,7 +1704,7 @@ A complete version of EDGE is available as a variety of packages that can fit in
 							<option value="bwa" >Reads Mapping (BWA against RefSeq)</option>
 						</optgroup>
 						<optgroup label="Other Tools">
-							<option value="metaphlan2" selected="">MetaPhlAn2</option>
+							<option value="metaphlan4" selected="">MetaPhlAn4</option>
 							<option value="kraken2" selected="">Kraken2</option>
 							<option value="centrifuge" selected="">Centrifuge</option>
 							<!-- Adding DIAMOND -->
@@ -1736,7 +1736,7 @@ A complete version of EDGE is available as a variety of packages that can fit in
 						<option value="diamond"> DIAMOND database </option>
 						-->
 						<option value="BWA" selected="">Reads Mapping (BWA against custom DB)</option>
-						<option value="Metaphlan2">MetaPhlAn2</option>
+						<option value="Metaphlan4">MetaPhlAn4</option>
 						<option value="Kraken">Kraken</option>
 					</select>
 					<a href="#" class="btnAdd-edge-taxa-custom-db" data-role="button" data-icon="plus" data-iconpos="notext">Add</a>
