@@ -847,7 +847,7 @@ $( document ).ready(function()
 		'content', $('<span>For detecting differentially expressed genes, all of which are R packages. This option provides users with multiple tools to use which can be spcified using following keywords:<table border="1"><tr><th>Methods</th><th>Descriptions</th></tr><tr><td><a href="http://bioconductor.org/packages/release/bioc/html/edgeR.html" target="_blank">edgeR</a></td><td>Uses edgeR.</td></tr><tr><td><a href="http://bioconductor.org/packages/release/bioc/html/DESeq2.html" target="_blank">DESeq2</a></td><td>Uses DESeq2.</td></tr><tr><td><a href="http://bioconductor.org/packages/release/bioc/html/ballgown.html" target="_blank">ballgown</a></td><td>Uses ballgown. Appropriate for eukaryotes.</td></tr><td>DEedge</td><td>Uses both edgeR and DESeq2.</td></tr><tr><td>DEgown</td><td>Uses DESeq2 and ballgown.</td></tr><tr><td>balledgeR</td><td>Uses ballgown and edgeR.</td></tr><tr><td>all</td><td>Uses all of the above methods.</td></tr></table></span>')
 	);
 	$("#edge-reads-taxa-tooltip").tooltipster(
-		'content',$('<span>EDGE uses multiple tools for taxonomy classification including GOTTCHA (bacterial & viral databases), MetaPhlAn2, Kraken and reads mapping to NCBI RefSeq using BWA. Each tool has its own database and you can find the taxonomy information table <a href="https://lanl-bioinformatics.github.io/EDGE/docs/taxonomyDBtable.html" target="_blank">[here]</a></span>')
+		'content',$('<span>EDGE uses multiple tools for taxonomy classification including GOTTCHA (bacterial & viral databases), MetaPhlAn4, Kraken and reads mapping to NCBI RefSeq using BWA. Each tool has its own database and you can find the taxonomy information table <a href="https://lanl-bioinformatics.github.io/EDGE/docs/taxonomyDBtable.html" target="_blank">[here]</a></span>')
 	);
 	$("#edge-binning-abund-file-tooltip").tooltipster(
                 'content',$('<span>Required when input is contig only. Please make sure that your abundance information is provided in the following format (\\t stands for a tab delimiter):<br/>(contig header)\\t(abundance)<br/>For example:<br/>A0001    30.89<br/>A0002    20.02</span>')
