@@ -8,7 +8,19 @@ while(<STDIN>){
 	chomp;
 	next if /LEVEL/;
 	next unless /\|s__/;
-	my ($phylo,$count) = $_ =~ /^(\S+)\t(\S+)$/;
+	next if (/^#/);
+        my @result = split /\t/, $_;
+        my ($phylo,$count);
+        if ( scalar(@result) > 2 ){
+                $phylo=$result[0];
+                $count=$result[2];
+
+        }else{
+                $phylo=$result[0];
+                $count=$result[1];
+        }
+
+#	my ($phylo,$count) = $_ =~ /^(\S+)\t(\S+)$/;
 
     $phylo =~ s/^\w__/\t/g;
     $phylo =~ s/\|\w__/\t/g;
