@@ -18,6 +18,7 @@ EDGE 2.4.1
 * update minimap2 to v2.24
 * update Unicycler to v0.5.0
 * update Qiime2 to 2022.2
+* update MetaPhlan2 to MetaPhlan4
 * add offset extenstion for primer trim
 * add -K 10000000 for bwa mem reproducibility
 * fix taxonomy classification tool summary reads count bug
@@ -36,6 +37,7 @@ metaplasmid and RNAviral
 Database:
 QIIME2 amplicon: Greengeen 13_8, SLIVA 138, Fungal ITS version 9.0 trained by scikit-learn 0.24.1
 Antismash database for antisamsh v6.
+MetaPhlan4 database
 
 
 -- Version 20201130
